2013-05-30  6.8.5-0 Cristy  <quetzlzacatenango@image...>
  * Caption no longer clips long words (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23504).

2013-05-25  6.8.5-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-8, SVN revision 12362.

2013-05-23  6.8.5-8 Glenn Randers-Pehrson <glennrp@image...>
  * Stopped a "-fsanitize-address" warning in the JNG coder.

2013-05-20  6.8.5-8 Cristy  <quetzlzacatenango@image...>
  * The -white-threshold option is symetrical with -black-threshold (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23441);
  * Fix multi-line PNM comments (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23442).
  * The -format option should not automatically append a newline since the
    user can specify a newline in the formatting expression.
  * The -level option is no longer returning a darkened image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23479).

2013-05-20  6.8.5-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-7, SVN revision 12310.

2013-05-14  6.8.5-7 Glenn Randers-Pehrson <glennrp@image...>
  * Recognize PNG iCCP chunks that contain the sRGB profile and replace
    them with the PNG sRGB chunk.  Use "-define png:preserve-iCCP" to
    get the previous behavior, of simply copying the iCCP chunk.

2013-05-11  6.8.5-7 Cristy  <quetzlzacatenango@image...>
  * Sometimes an sRGB image is masquerading as grayscale (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23370).
  * Labels no longer overflow (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22964).
  * If more then one exception, return the highest security exception.
  * A grayscale image returns a color JPEG for -type TrueColor (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23421).
  * Read PAM comment (reference