@@ -1,6 +1,8 @@
 2013-05-30  6.8.5-0 Cristy  <quetzlzacatenango@image...>
   * Caption no longer clips long words (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23504).
+  * The lightness intensity is (min(R',G',B')+max(R',G',B'))/2.0 (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23517).
 
 2013-05-25  6.8.5-8 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.5-8, SVN revision 12362.
